# cams

./: .gitignore  cams.sln
Postman/: CAMS.postman_collection.json  ENV_CAMS_Local.postman_environment.json
cams/: Global.asax  Global.asax.cs  Web.config  cams.csproj  packages.config
cams.MongoDBConnector/: cams.MongoDBConnector.csproj
cams.MongoDBConnector/Collections/: CollectionRepository.cs
cams.MongoDBConnector/Core/: EntityBaseExtensions.cs  MongoDBPagedCollection.cs  RepositoryBase.cs
cams.MongoDBConnector/Items/: ItemRepository.cs
cams.MongoDBConnector/Properties/: AssemblyInfo.cs
cams.MongoDBConnector/QueryParameters/: FilterExtensions.cs  MongoDBFilteringParametersExtensions.cs  MongoDBPagingParameters.cs  MongoDBPagingParametersExtensions.cs  MongoDBSortingParametersExtensions.cs
cams.MongoDBConnector/Sessions/: FilterExtensions.cs  IMongoDBSession.cs  IMongoDBSessionFactory.cs  MongoDBFilteringParametersExtensions.cs  MongoDBPagedCollection.cs  MongoDBPagingParameters.cs  MongoDBPagingParametersExtensions.cs  MongoDBSession.cs  MongoDBSessionFactory.cs  MongoDBSortingParametersExtensions.cs
cams.MongoDBConnector/Users/: UserExtensions.cs  UserRepository.cs
cams.Tests/: App.config  cams.Tests.csproj  packages.config
cams.Tests/Controllers/: HomeControllerTest.cs  ValuesControllerTest.cs
cams.Tests/Properties/: AssemblyInfo.cs
cams.model/: cams.Model.csproj
cams.model/Collections/: Collection.cs  ICollectionRepository.cs
cams.model/Core/: EntityBase.cs  IIdentifiable.cs  (+5 more)
src/appli/: CMakeLists.txt  cams-cli.cpp  cams-gui.cpp
(+98 files in other folders)
